# django-adminx

./: .gitignore  DTL_TO_JINJA2_CONVERSION.md  PLAN.md  pyproject.toml
.github/workflows/: ci.yml
django_adminx/: exceptions.py  jinja2_env.py
django_adminx/jinja2/admin/: 404.html  500.html  app_index.html  app_list.html  base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  color_theme_toggle.html  index.html  login.html  nav_sidebar.html
django_adminx/jinja2/admin/auth/user/: change_password.html
django_adminx/jinja2/admin/edit_inline/: stacked.html  tabular.html
django_adminx/jinja2/admin/includes/: fieldset.html
django_adminx/jinja2/registration/: password_change_form.html
examples/admin/: README.md  manage.py  seed.py  settings.py
examples/admin/shop/: admin.py  models.py
main/: 404.html  index.html  sitemap.xml
main/getting-started/installation/: index.html
main/reference/changelog/: index.html
main/search/: search_index.json
tests/: test_jinja2_admin_views.py  test_jinja2_env.py  test_jinja2_parity.py
tests/settings/: jinja2.py
tests/testapp/: admin.py  models.py
tests/testapp/migrations/: 0001_initial.py
