[project]
name = "django-adminx"
version = "0.1.0a1"
description = "Performance-oriented Django admin extensions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = []
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = ["Django>=5.2,<7"]

[project.optional-dependencies]
jinja2 = ["Jinja2>=3.1"]

[project.urls]
Changelog = "https://oliverhaas.github.io/django-adminx/reference/changelog/"
Documentation = "https://oliverhaas.github.io/django-adminx/"
Homepage = "https://github.com/oliverhaas/django-adminx"
Repository = "https://github.com/oliverhaas/django-adminx.git"

[dependency-groups]
dev = [
  "django-stubs==6.0.1",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-xdist==3.8.0",
  "Jinja2>=3.1",
  "ruff==0.15.8",
  "beautifulsoup4>=4.14.3",
]
docs = ["mike==2.1.4", "mkdocs==1.6.1", "mkdocs-material==9.7.6"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["django_adminx"]

[tool.hatch.build.targets.sdist]
include = ["django_adminx", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
extend-exclude = [
  "examples",
  # Copied from Django — not our code to lint
  "django_adminx/actions.py",
  "django_adminx/checks.py",
  "django_adminx/decorators.py",
  "django_adminx/exceptions.py",
  "django_adminx/filters.py",
  "django_adminx/forms.py",
  "django_adminx/helpers.py",
  "django_adminx/models.py",
  "django_adminx/options.py",
  "django_adminx/sites.py",
  "django_adminx/utils.py",
  "django_adminx/widgets.py",
  "django_adminx/views/",
  "django_adminx/templatetags/",
  "django_adminx/migrations/",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "E501", "EM", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",
  "ARG",
  "F841",
  "FBT",
  "PLC0415",
  "PLR2004",
  "PT006",
  "PT011",
  "PT013",
  "PT018",
  "RUF012",
  "B905",
  "C901",
  "RET504",
  "RUF059",
  "S101",
  "S105",
  "S106",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
pretty = true
python_version = "3.12"
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
# Copied from Django — not our code to type-check
module = [
  "django_adminx.actions",
  "django_adminx.checks",
  "django_adminx.decorators",
  "django_adminx.exceptions",
  "django_adminx.filters",
  "django_adminx.forms",
  "django_adminx.helpers",
  "django_adminx.models",
  "django_adminx.options",
  "django_adminx.sites",
  "django_adminx.utils",
  "django_adminx.widgets",
  "django_adminx.views.*",
  "django_adminx.templatetags.*",
  "django_adminx.migrations.*",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings.base"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.base"
addopts = "--cov=django_adminx --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
pythonpath = ["tests"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
skip_covered = true
